--- a/style.css
+++ b/style.css
@@ -9,8 +9,8 @@ body {
 }
 
 .canvas {
-  width: 700px;
-  height: 700px;
+  width: 500px;
+  height: 500px;
   background-color: white;
   border-radius: 15px;
   box-shadow: 0 4px 6px rgba(50, 50, 93, 0.11), 0 1px 3px rgba(0, 0, 0, 0.08);
@@ -24,6 +24,8 @@ body {
 
 .controls .controls_range {
   margin-bottom: 20px;
+  display: flex;
+  justify-content: center;
 }
 .controls .controls_btns {
   margin-bottom: 30px;
@@ -50,9 +52,6 @@ body {
 
 }
 
-
-
-
 .controls .controls_colors {
   display: flex;
 
@@ -64,4 +63,5 @@ body {
   border-radius: 25px;
   box-shadow: 0 4px 6px rgba(50, 50, 93, 0.11), 0 1px 3px rgba(0, 0, 0, 0.08);
   cursor: pointer;
+  margin: 0 5px;
 }
